<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/lose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/lose" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lose"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/losequit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit" />

        <Button
            android:id="@+id/losegoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goon" />
    </LinearLayout>


</RelativeLayout>