<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/norm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/norm"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/fog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/norm"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/fog"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fog"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>